# MDDB

./: Cargo.toml  diesel.toml
doc/: api.http  shell
migrations/2021-12-10-063802_migration0/: down.sql  up.sql
migrations/2021-12-14-144113_regular/: down.sql  up.sql
src/: auth.rs  handlers.rs  main.rs  models.rs  schema.rs  schema_db_enum.rs
static/: login.html
