[package]
name = "mdb"
version = "0.1.0"
authors = ["Виталий Артемьев <vitaly.artemiev@yandex.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = "1.0"
rand = "0.8"
rust-argon2 = "0.8"

dotenv = "0.15"
actix-web = "3.3"
diesel = { git = "https://github.com/diesel-rs/diesel", branch = "master", version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }